<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FoodDetail"
    android:background="@color/black_bg">
    <Button
        android:id="@+id/btn_back_detail"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/ic_baseline_arrow_back_24"/>
    <Button
        android:id="@+id/btn_about_detail"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_food_detail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="#5B000000"
        tools:srcCompat="@drawable/ayam_lodho"
        tools:ignore="UseAppTint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="280dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:elevation="2dp"
        android:background="@drawable/myrect"
        android:padding="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_food_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_name"
            app:layout_constraintTop_toBottomOf="@+id/img_food_detail"
            android:fontFamily="@font/arima_madurai_bold"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/tv_food_location_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:textSize="12sp"
                android:text="@string/food_location"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/ic_baseline_star_24"/>

            <TextView
                android:id="@+id/tv_food_rating_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/food_rating"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_food_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:text="@string/food_description"/>
        <TextView
            android:id="@+id/tv_food_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/source"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>